data/derived/comb/progs/unify/prog2914.ml.out
Characters 82-83:
  | Sine(a) -> sin(pi*.a)
                       ^
Error: This expression has type expr but an expression was expected of type
         float
